--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
     }
 
     buildFeatures{
-        viewBinding = true;
+        viewBinding = true
     }
 }
 
@@ -45,4 +45,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    // Gson
+    implementation 'org.apache.commons:commons-io:1.3.2'
+    implementation 'com.google.code.gson:gson:2.8.+'
+    // for adding recyclerview
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    // for adding cardview
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
